# hcc

./: .dockerignore  .eslintrc  .gitignore  .stignore  .yarnrc.yml  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  next.config.js  package.json  tsconfig.json
.githooks/: pre-commit
.github/: dependabot.yaml
backend/: .env.example  Cargo.toml  bacon.toml
backend/src/: cache.rs  lib.rs  main.rs  settings.rs  storage.rs
backend/src/hue/: client.rs  data.rs  discovery.rs  events.rs  handlers.rs  migrate.rs  mod.rs  models.rs
backend/src/pv/: handlers.rs  models.rs  storage.rs
backend/src/solis/: client.rs  handlers.rs  mod.rs  models.rs  recording.rs  storage.rs
backend/src/weather/: converter.rs  handlers.rs  mod.rs  models.rs  sun.rs
backend/src/weather/fmi/: client.rs  converter.rs  mod.rs  models.rs
backend/src/weather/tomorrow/: client.rs
backend/tests/: smoke.rs
components/: Arrow.tsx  Box.tsx  CurrentTime.tsx  Icon.tsx  LightGroups.tsx  Motion.tsx  OpenWeather.tsx  RaindropIcon.tsx  Spinner.tsx  Temperature.tsx  TomorrowWeather.tsx  Tooltip.tsx  Weather.tsx  WeatherChart.tsx  box.tsx  icon.tsx  spinner.tsx  temperature.tsx  useCurrentTime.ts  useTheme.ts  weather.tsx
documentation/: fmi-open-data-api.md  soliscloud-api.md
frontend/: .gitignore  CLAUDE.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
lib/: file-cache.ts  hue-events.ts  hue.ts
pages/: _app.tsx  _document.tsx  index.tsx
scripts/: refresh-pv-forecast.sh
server/: index.ts
src/: themes.ts  utils.ts  weatherIcons.tsx
(+93 files in other folders)
