[package]
name = "hcc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-web-lab = "0.26"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
futures-util = "0.3"
utoipa = { version = "5", features = ["actix_extras"] }
actix-files = "0.6"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
